fixed the back button error by adding it to navbar on mobiles

--- a/src/styles/BackButton.module.css
+++ b/src/styles/BackButton.module.css
@@ -1,7 +1,7 @@
 .backbtn {
     padding: 10px;
-    boxShadow: 0 2px 4px rgba(0,0,0,0.2)
-}
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  }
 
 @media (max-width: 765px) {
 
